[package]
name = "RustHarderInProcess"
version = "0.1.0"
edition = "2018"

# Specify the necessary dependencies
[dependencies]
windows-sys = { version = "0.48.0", features = ["Win32_System_Memory", "Win32_Foundation", "Win32_System_Threading", "Win32_Security"] }
reqwest = { version = "0.12.8", features = ["blocking", "json"] }
winapi = { version = "0.3", features = ["winbase", "synchapi", "processthreadsapi", "libloaderapi", "minwinbase", "errhandlingapi", "sysinfoapi", "ntdef"] }